[package]
name = "bluesky-firehose-stream"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"

[features]
default = []
prometheus = ["dep:prometheus"]
examples = [
    "prometheus",
    "dep:axum",
    "dep:dotenvy",
    "dep:tracing-subscriber",
    "dep:atty",
    "dep:anyhow",
]

[dependencies]
atrium-api = "0.24.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12" }
anyhow = { version = "1", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.2.2"
tokio-tungstenite = { version = "0.24", features = ["native-tls", "url"] }

futures = "0.3"
rustls = { version = "0.23.19", features = ["ring"] }
dotenvy = { version = "0.15", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
atty = { version = "0.2", optional = true }
log = "0.4"
lingua = "1.6.2"
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4"
serde_ipld_dagcbor = "0.6"
rs-car-sync = "0.4"
cid = "0.11"
cid_old = { package = "cid", version = "0.10" }
multihash = "0.19"
thiserror = "2"
ipld-core = "0.4"
trait-variant = "0.1.2"
prometheus = { version = "0.13", optional = true }
axum = { version = "0.8", optional = true }
lazy_static = "1"

[[example]]
name = "bluesky-prometheus-exporter"
required-features = ["examples"]

[[example]]
name = "sandbox"
