[package]
name = "bluesky-firehose-stream"
description = "Decode bluesky firehose messages"
version = "0.1.2"
edition = "2021"
license = "MIT"

[features]
default = ["websocket"]
prometheus = ["dep:prometheus"]
websocket = ["dep:tokio-tungstenite"]
examples = [
    "prometheus",
    "websocket",
    "dep:axum",
    "dep:dotenvy",
    "dep:tracing-subscriber",
    "dep:atty",
    "dep:anyhow",
    "dep:serde_json",
]

[dependencies]
atrium-api = "0.24.8"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "time",
    "macros",
    "net",
] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
chrono = "0.4"
serde_ipld_dagcbor = "0.6"
rs-car-sync = "0.4"
cid = "0.11"
cid_old = { package = "cid", version = "0.10" }
multihash = "0.19"
thiserror = "2"
ipld-core = "0.4"
lazy_static = "1"

tokio-tungstenite = { version = "0.24", features = [
    "native-tls",
    "url",
], optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
atty = { version = "0.2", optional = true }
dotenvy = { version = "0.15", optional = true }
anyhow = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
prometheus = { version = "0.13", optional = true }
axum = { version = "0.8", optional = true }

[[example]]
name = "bluesky-prometheus-exporter"
required-features = ["examples"]

[[example]]
name = "sandbox"
required-features = ["examples"]
