[package]
name = "bluesky-firehose-stream"
description = "Decode bluesky firehose messages"
version = "0.4.1"
edition = "2024"
license = "MIT"

[features]
examples = [
    "prometheus",
    "websocket",
    "dep:axum",
    "dep:dotenvy",
    "dep:tracing-subscriber",
    "dep:atty",
    "dep:anyhow",
    "dep:serde_json",
]
default = ["websocket", "native-tls"]
prometheus = ["dep:prometheus"]
websocket = ["tokio-tungstenite/connect"]
native-tls = ["tokio-tungstenite?/native-tls"]
rustls-tls-native-roots = ["tokio-tungstenite?/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite?/rustls-tls-native-roots"]

[dependencies]
atrium-api = "0.25"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "time",
    "macros",
    "net",
] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
chrono = "0.4"
serde_ipld_dagcbor = "0.6"
rs-car-sync = "0.5"
cid = "0.11"
multihash = "0.19"
thiserror = "2"
ipld-core = "0.4"
lazy_static = "1"

tokio-tungstenite = { version = "0.27", features = [
    "url",
], optional = true, default-features = false }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
atty = { version = "0.2", optional = true }
dotenvy = { version = "0.15", optional = true }
anyhow = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
prometheus = { version = "0.14", optional = true }
axum = { version = "0.8", optional = true }

[[example]]
name = "bluesky-prometheus-exporter"
required-features = ["examples"]

[[example]]
name = "sandbox"
required-features = ["examples"]
